manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bvkme-service
  labels:
    app: bvkme
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 80
    name: http-website
  selector:
    app: bvkme
