manifests/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  namespace: bvkme
spec:
  ingressClassName: nginx
  rules:
  - host: bvkme.lan.ping6.nl
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-service
                port:
                  number: 8080
